<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btrmb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rmb" />

        <Button
            android:id="@+id/btdollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar" />

        <Button
            android:id="@+id/bturo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uro" />
    </LinearLayout>

    <com.lance.widget.RunningTextView
        android:id="@+id/runningtextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/defaultnum"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:hint="@string/hint"
        android:inputType="numberDecimal"
        android:singleLine="true" />

    <Button
        android:id="@+id/btplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/PLAY" />

</LinearLayout>